target/debug/build/num-traits-e9afeaacd9ffc735/stderr
error: could not copy "/Users/lance/myProject/did-server/target/debug/build/num-traits-e9afeaacd9ffc735/out/probe0.probe0.442ae322-cgu.0.rcgu.ll" to "/Users/lance/myProject/did-server/target/debug/build/num-traits-e9afeaacd9ffc735/out/probe0.ll": No such file or directory (os error 2)

error: aborting due to previous error

error[E0599]: no method named `copysign` found for type `f64` in the current scope
 --> <anon>:2:31
  |
2 | pub fn probe() { let _ = 1f64.copysign(-1f64); }
  |                               ^^^^^^^^ method not found in `f64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
